<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.amereco</groupId>
    <artifactId>AmerecoLauncher</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>16</maven.compiler.release>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>17.0.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>dev.dirs</groupId>
            <artifactId>directories</artifactId>
            <version>26</version>
        </dependency>
        
        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.3.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.3.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-jre8</artifactId>
            <version>2.35.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>
                        <arg>--add-reads</arg>
                        <arg>ru.amereco.amerecolauncher=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <mainClass>ru.amereco.amerecolauncher.Main</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                    </execution>
                    <execution>
                        <!-- Configuration for manual attach debugging -->
                        <!-- Usage: mvn clean javafx:run@debug -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE debugging -->
                        <id>ide-debug</id>
                        <configuration>
                            <options>
                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE profiling -->
                        <id>ide-profile</id>
                        <configuration>
                            <options>
				<option>${profiler.jvmargs.arg1}</option>
				<option>${profiler.jvmargs.arg2}</option>
				<option>${profiler.jvmargs.arg3}</option>
				<option>${profiler.jvmargs.arg4}</option>
				<option>${profiler.jvmargs.arg5}</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>shade</id>
            <activation>
                <property>
                    <name>packager.shade</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                                <configuration>
                                    <transformers>
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                            <mainClass>ru.amereco.amerecolauncher.Main</mainClass>
                                        </transformer>
                                    </transformers>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>include-javafx</id>
            <activation>
                <property>
                    <name>include-jfx</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>17.0.2</version>
                    <classifier>win</classifier>
                </dependency>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>17.0.2</version>
                    <classifier>linux</classifier>
                </dependency>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>17.0.2</version>
                    <classifier>mac-aarch64</classifier>
                </dependency>
<!--            <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>17.0.2</version>
                    <classifier>linux-aarch64</classifier>
                </dependency>-->
<!--            <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>17.0.2</version>
                    <classifier>mac</classifier>
                </dependency>-->
            </dependencies>
        </profile>
        <profile>
            <id>javapackager</id>
            <activation>
                <property>
                    <name>packager.javapackager</name>
                </property>
            </activation>
            <properties>
                <packager.javapackager>true</packager.javapackager>
                
<!--            <project.platform>linux</project.platform>
                <project.arch>x64</project.arch>-->
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.github.fvarrui</groupId>
                        <artifactId>javapackager</artifactId>
                        <version>1.7.6</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>package</goal>
                                </goals>
                                <configuration>
                                    <!-- mandatory -->
                                    <mainClass>ru.amereco.amerecolauncher.Main</mainClass>
                                    <!-- optional -->
                                    <bundleJre>true</bundleJre>
                                    <generateInstaller>true</generateInstaller>
                                    <platform>${project.platform}</platform>
                                    <arch>${project.arch}</arch>
                                    <name>AmerecoLauncher_${project.platform}-${project.arch}</name>
                                    <linuxConfig>
                                        <generateAppImage>false</generateAppImage>
                                        <generateDeb>true</generateDeb>
                                        <generateRpm>false</generateRpm>
                                        <categories>
                                            <category>Game</category>
                                        </categories>
                                    </linuxConfig>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>download-jdk</id>
            <activation>
                <property>
                    <name>download-jdk</name>
                </property>
            </activation>
            <properties>               
                <jdk.version>21</jdk.version>
                <jdk.dest>${project.build.directory}/jdk</jdk.dest>
                <jdk.dest2></jdk.dest2>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>download-jdk</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <ant antfile="jdk-package.xml">
                                            <target name="go"/>
                                        </ant>
                                        <exec executable="bash" outputproperty="jdk.dest1">
                                            <arg value="-c"/>
                                            <arg value="ls -1 -d ${jdk.dest}/*/ | head -1"/>
                                        </exec>
                                        <echo message="Output: ${jdk.dest1}"/>
                                    </target>
                                    <exportAntProperties>true</exportAntProperties>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>io.github.fvarrui</groupId>
                        <artifactId>javapackager</artifactId>
                        <version>1.7.6</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>package</goal>
                                </goals>
                                <configuration>
                                    <jdkPath>${jdk.dest1}/${jdk.dest2}</jdkPath>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <property>
                    <name>packager.javapackager</name>
                </property>
                <os>
                    <family>linux</family>
                    <arch>amd64</arch>
                </os>
            </activation>
            <properties>
                <project.platform>linux</project.platform>
                <project.arch>x64</project.arch>
                <jdk.dest2></jdk.dest2>
            </properties>
        </profile>
        <profile>
            <id>linux-aarch64</id>
            <activation>
                <property>
                    <name>packager.javapackager</name>
                </property>
                <os>
                    <family>linux</family>
                    <arch>aarch64</arch>
                </os>
            </activation>
            <properties>
                <project.platform>linux</project.platform>
                <project.arch>aarch64</project.arch>
                <jdk.dest2></jdk.dest2>
            </properties>
        </profile>
        <profile>
            <id>windows</id>
            <activation>
                <property>
                    <name>packager.javapackager</name>
                </property>
                <os>
                    <family>windows</family>
                    <arch>amd64</arch>
                </os>
            </activation>
            <properties>
                <project.platform>windows</project.platform>
                <project.arch>x64</project.arch>
                <jdk.dest2></jdk.dest2>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <property>
                    <name>packager.javapackager</name>
                </property>
                <os>
                    <family>mac</family>
                    <arch>amd64</arch>
                </os>
            </activation>
            <properties>
                <project.platform>mac</project.platform>
                <project.arch>x64</project.arch>
                <jdk.dest2>Contents/Home/</jdk.dest2>
            </properties>
        </profile>
        <profile>
            <id>mac-aarch64</id>
            <activation>
                <property>
                    <name>packager.javapackager</name>
                </property>
                <os>
                    <family>mac</family>
                    <arch>aarch64</arch>
                </os>
            </activation>
            <properties>
                <project.platform>mac</project.platform>
                <project.arch>aarch64</project.arch>
                <jdk.dest2>Contents/Home/</jdk.dest2>
            </properties>
        </profile>
    </profiles>
</project>
